// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserAccountMenu snapshots renders correctly when all optional props are passed and it's opened 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: none;
  border: 0;
  border-radius: 18px;
  box-sizing: border-box;
  color: #05192D;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 36px;
  min-width: 36px;
  outline: 0;
  padding: 0;
  width: 36px;
}

@media (min-width: 821px) {
  .emotion-1 {
    border-radius: 15px;
    height: 30px;
    -webkit-box-pack: space-evenly;
    -ms-flex-pack: space-evenly;
    -webkit-justify-content: space-evenly;
    justify-content: space-evenly;
    min-width: 54px;
    width: 54px;
  }

  .emotion-1:hover {
    background-color: #F7F3EB;
  }
}

.emotion-2 {
  border-radius: 50%;
  height: 36px;
  overflow: hidden;
  width: 36px;
}

@media (min-width: 821px) {
  .emotion-2 {
    height: 22px;
    width: 22px;
  }
}

.emotion-3 {
  height: 100%;
  width: auto;
}

.emotion-4 {
  display: none;
}

@media (min-width: 821px) {
  .emotion-4 {
    display: block;
  }
}

.emotion-5 {
  position: absolute;
  right: 0;
  z-index: 7000;
  top: 44px;
}

@media (min-width: 821px) {
  .emotion-5 {
    top: 38px;
  }
}

.emotion-6 {
  background-color: #ffffff;
  border-radius: 4px;
  -webkit-transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  box-shadow: 0 0 2px 0 rgba(5, 25, 45, 0.25),0 8px 12px -4px rgba(5,25,45,0.3);
  overflow: hidden;
}

.emotion-7 {
  border-bottom: 1px solid #E5E1DA;
  box-sizing: border-box;
  padding: 8px;
}

.emotion-8 {
  -webkit-font-smoothing: antialiased;
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-style: normal;
  font-weight: 800;
  line-height: 1.5;
  border-radius: 4px;
  display: inline-block;
  text-transform: uppercase;
  background-color: #7933FF;
  color: #FFFFFF;
  font-size: 14px;
  line-height: 18px;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  line-height: 24px;
  width: 100%;
}

.emotion-9 {
  box-sizing: border-box;
  list-style: none;
  margin: 0;
  padding: 0;
  padding-bottom: 8px;
  padding-top: 8px;
}

.emotion-10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0;
  box-sizing: border-box;
  color: #05192D;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  height: 42px;
  opacity: 0.6;
  outline: 0;
  padding-left: 24px;
  padding-right: 24px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  width: 100%;
}

.emotion-11:hover {
  background-color: #F7F3EB;
  opacity: 1;
}

.emotion-12 {
  box-sizing: border-box;
  padding-left: 8px;
}

.emotion-19 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border-top: 1px solid #E5E1DA;
  margin-top: 8px;
  padding-top: 8px;
}

<div
  class="emotion-0"
>
  <button
    aria-expanded="true"
    aria-haspopup="true"
    aria-label="My Account"
    class="emotion-1"
    data-testid="user-account-menu-button"
    data-trackid="track-menu-trigger"
    role="button"
    tabindex="0"
  >
    <div
      class="emotion-2"
    >
      <img
        alt=""
        class="emotion-3"
        data-testid="user-account-menu-avatar"
        src="taylor-swift-pic.jpg"
      />
    </div>
    <svg
      aria-hidden="true"
      class="emotion-4"
      height="16"
      role="img"
      viewBox="0 0 18 18"
      width="16"
    >
      <title>
        Chevron Up
      </title>
      <path
        d="M9.756 5.845l4.95 4.947a1 1 0 11-1.415 1.415L8.997 7.916l-4.293 4.279a.998.998 0 01-1.413-.003 1.001 1.001 0 01.003-1.415l5.002-4.986a.998.998 0 011.46.054z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
  <div
    class="emotion-5"
    role="menu"
  >
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7"
      >
        <strong
          class="emotion-8"
        >
          2,000 XP
        </strong>
      </div>
      <ul
        class="emotion-9"
      >
        <li
          class="emotion-10"
          tabindex="-1"
        >
          <a
            class="emotion-11"
            data-trackid="track-menu-my-profile"
            href="https://datacamp.com/profile/taylorswift"
            role="menuitem"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              height="16"
              role="img"
              viewBox="0 0 18 18"
              width="16"
            >
              <title>
                User
              </title>
              <path
                d="M12 17v-5a1 1 0 00-1-1H7a1 1 0 00-1 1v5c0 .667-.333 1-1 1s-1-.333-1-1v-5a3 3 0 013-3h4a3 3 0 013 3v5c0 .667-.333 1-1 1-.666 0-1-.333-1-1zM9 6a2 2 0 100-4 2 2 0 000 4zm0 2a4 4 0 110-8 4 4 0 010 8z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
            <span
              class="emotion-12"
            >
              My Profile
            </span>
          </a>
        </li>
        <li
          class="emotion-10"
          tabindex="-1"
        >
          <a
            class="emotion-11"
            data-trackid="track-menu-account-settings"
            href="https://datacamp.com/profile/account_settings"
            role="menuitem"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              height="16"
              role="img"
              viewBox="0 0 18 18"
              width="16"
            >
              <title>
                Cog
              </title>
              <path
                d="M7.186 15.621a3.047 3.047 0 013.628 0l.25.186a7.053 7.053 0 001.29-.535l.045-.308a3.047 3.047 0 012.565-2.565l.308-.046c.22-.41.4-.842.535-1.289l-.186-.25a3.047 3.047 0 010-3.628l.186-.25a7.053 7.053 0 00-.535-1.29l-.308-.045A3.047 3.047 0 0112.4 3.036l-.046-.308c-.41-.22-.842-.4-1.289-.535l-.25.186a3.047 3.047 0 01-3.628 0l-.25-.186a7.053 7.053 0 00-1.29.535l-.045.308A3.047 3.047 0 013.036 5.6l-.308.046c-.22.41-.4.842-.535 1.289l.186.25a3.047 3.047 0 010 3.628l-.186.25c.136.447.315.879.535 1.29l.308.045A3.047 3.047 0 015.6 14.964l.046.308c.41.22.842.4 1.289.535l.25-.186zM7.388 18a9.092 9.092 0 01-3.612-1.497l-.184-1.24a1.016 1.016 0 00-.856-.855l-1.24-.184A9.092 9.092 0 010 10.612l.747-1.007c.266-.36.266-.85 0-1.21L0 7.388a9.092 9.092 0 011.497-3.612l1.24-.184c.442-.066.789-.413.855-.856l.184-1.24A9.092 9.092 0 017.388 0l1.007.747c.36.266.85.266 1.21 0L10.612 0a9.092 9.092 0 013.612 1.497l.184 1.24c.066.442.413.789.856.855l1.24.184A9.092 9.092 0 0118 7.388l-.747 1.007c-.266.36-.266.85 0 1.21L18 10.612a9.092 9.092 0 01-1.497 3.612l-1.24.184c-.442.066-.789.413-.855.856l-.184 1.24A9.092 9.092 0 0110.612 18l-1.007-.747a1.016 1.016 0 00-1.21 0L7.388 18zM9 13.063a4.063 4.063 0 110-8.126 4.063 4.063 0 010 8.126zm0-2.032A2.031 2.031 0 109 6.97a2.031 2.031 0 000 4.062z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
            <span
              class="emotion-12"
            >
              Account Settings
            </span>
          </a>
        </li>
        <li
          class="emotion-10"
          tabindex="-1"
        >
          <a
            class="emotion-11"
            href="https://info.com"
            role="menuitem"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              height="16"
              role="img"
              viewBox="0 0 18 18"
              width="16"
            >
              <title>
                Add
              </title>
              <path
                d="M9 16A7 7 0 109 2a7 7 0 000 14zm0 2A9 9 0 119 0a9 9 0 010 18zm1-10h3a1 1 0 010 2h-3v3a1 1 0 01-2 0v-3H5a1 1 0 110-2h3V5a1 1 0 112 0v3z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
            <span
              class="emotion-12"
            >
              Additional Info
            </span>
          </a>
        </li>
        <li
          class="emotion-19"
          tabindex="-1"
        >
          <a
            class="emotion-11"
            data-trackid="track-menu-log-out"
            href="https://datacamp.com/users/sign_out"
            role="menuitem"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              height="16"
              role="img"
              viewBox="0 0 18 18"
              width="16"
            >
              <title>
                Exit
              </title>
              <path
                d="M8 0a1 1 0 011 1v3.41a1 1 0 11-2 0V2H2v14h5v-2.428a1 1 0 112 0V17a1 1 0 01-1 1H1a1 1 0 01-1-1V1a1 1 0 011-1h7zm5.725 4.294l3.942 3.958a.997.997 0 01-.002 1.498l-3.956 3.957a1 1 0 01-1.497-1.322l.083-.094L14.58 10l-9.58.002a1 1 0 110-2L14.593 8l-2.287-2.296a.998.998 0 01.003-1.413 1.001 1.001 0 011.415.003z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
            <span
              class="emotion-12"
            >
              Log Out
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`UserAccountMenu snapshots renders correctly when only main app URL is passed and it's closed 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: none;
  border: 0;
  border-radius: 18px;
  box-sizing: border-box;
  color: #05192D;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 36px;
  min-width: 36px;
  outline: 0;
  padding: 0;
  width: 36px;
}

@media (min-width: 821px) {
  .emotion-1 {
    border-radius: 15px;
    height: 30px;
    -webkit-box-pack: space-evenly;
    -ms-flex-pack: space-evenly;
    -webkit-justify-content: space-evenly;
    justify-content: space-evenly;
    min-width: 54px;
    width: 54px;
  }

  .emotion-1:hover {
    background-color: #F7F3EB;
  }
}

.emotion-2 {
  border-radius: 50%;
  height: 36px;
  overflow: hidden;
  width: 36px;
}

@media (min-width: 821px) {
  .emotion-2 {
    height: 22px;
    width: 22px;
  }
}

.emotion-3 {
  height: 100%;
  width: auto;
}

.emotion-4 {
  display: none;
}

@media (min-width: 821px) {
  .emotion-4 {
    display: block;
  }
}

<div
  class="emotion-0"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    aria-label="My Account"
    class="emotion-1"
    data-testid="user-account-menu-button"
    role="button"
    tabindex="0"
  >
    <div
      class="emotion-2"
    >
      <img
        alt=""
        class="emotion-3"
        data-testid="user-account-menu-avatar"
        src="data:image/svg+xml;base64,default-avatar"
      />
    </div>
    <svg
      aria-hidden="true"
      class="emotion-4"
      height="16"
      role="img"
      viewBox="0 0 18 18"
      width="16"
    >
      <title>
        Down Chevron
      </title>
      <path
        d="M8.244 12.155l-4.95-4.947a1 1 0 111.415-1.415l4.294 4.291 4.293-4.279a.998.998 0 011.413.003c.39.392.388 1.025-.003 1.415l-5.002 4.986a.998.998 0 01-1.46-.054z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`UserAccountMenu snapshots renders correctly when only main app URL is passed and it's opened 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: none;
  border: 0;
  border-radius: 18px;
  box-sizing: border-box;
  color: #05192D;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 36px;
  min-width: 36px;
  outline: 0;
  padding: 0;
  width: 36px;
}

@media (min-width: 821px) {
  .emotion-1 {
    border-radius: 15px;
    height: 30px;
    -webkit-box-pack: space-evenly;
    -ms-flex-pack: space-evenly;
    -webkit-justify-content: space-evenly;
    justify-content: space-evenly;
    min-width: 54px;
    width: 54px;
  }

  .emotion-1:hover {
    background-color: #F7F3EB;
  }
}

.emotion-2 {
  border-radius: 50%;
  height: 36px;
  overflow: hidden;
  width: 36px;
}

@media (min-width: 821px) {
  .emotion-2 {
    height: 22px;
    width: 22px;
  }
}

.emotion-3 {
  height: 100%;
  width: auto;
}

.emotion-4 {
  display: none;
}

@media (min-width: 821px) {
  .emotion-4 {
    display: block;
  }
}

.emotion-5 {
  position: absolute;
  right: 0;
  z-index: 7000;
  top: 44px;
}

@media (min-width: 821px) {
  .emotion-5 {
    top: 38px;
  }
}

.emotion-6 {
  background-color: #ffffff;
  border-radius: 4px;
  -webkit-transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  box-shadow: 0 0 2px 0 rgba(5, 25, 45, 0.25),0 8px 12px -4px rgba(5,25,45,0.3);
  overflow: hidden;
}

.emotion-7 {
  box-sizing: border-box;
  list-style: none;
  margin: 0;
  padding: 0;
  padding-bottom: 8px;
  padding-top: 8px;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0;
  box-sizing: border-box;
  color: #05192D;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  height: 42px;
  opacity: 0.6;
  outline: 0;
  padding-left: 24px;
  padding-right: 24px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  width: 100%;
}

.emotion-9:hover {
  background-color: #F7F3EB;
  opacity: 1;
}

.emotion-10 {
  box-sizing: border-box;
  padding-left: 8px;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border-top: 1px solid #E5E1DA;
  margin-top: 8px;
  padding-top: 8px;
}

<div
  class="emotion-0"
>
  <button
    aria-expanded="true"
    aria-haspopup="true"
    aria-label="My Account"
    class="emotion-1"
    data-testid="user-account-menu-button"
    role="button"
    tabindex="0"
  >
    <div
      class="emotion-2"
    >
      <img
        alt=""
        class="emotion-3"
        data-testid="user-account-menu-avatar"
        src="data:image/svg+xml;base64,default-avatar"
      />
    </div>
    <svg
      aria-hidden="true"
      class="emotion-4"
      height="16"
      role="img"
      viewBox="0 0 18 18"
      width="16"
    >
      <title>
        Chevron Up
      </title>
      <path
        d="M9.756 5.845l4.95 4.947a1 1 0 11-1.415 1.415L8.997 7.916l-4.293 4.279a.998.998 0 01-1.413-.003 1.001 1.001 0 01.003-1.415l5.002-4.986a.998.998 0 011.46.054z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
  <div
    class="emotion-5"
    role="menu"
  >
    <div
      class="emotion-6"
    >
      <ul
        class="emotion-7"
      >
        <li
          class="emotion-8"
          tabindex="-1"
        >
          <a
            class="emotion-9"
            href="https://datacamp.com/profile/account_settings"
            role="menuitem"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              height="16"
              role="img"
              viewBox="0 0 18 18"
              width="16"
            >
              <title>
                Cog
              </title>
              <path
                d="M7.186 15.621a3.047 3.047 0 013.628 0l.25.186a7.053 7.053 0 001.29-.535l.045-.308a3.047 3.047 0 012.565-2.565l.308-.046c.22-.41.4-.842.535-1.289l-.186-.25a3.047 3.047 0 010-3.628l.186-.25a7.053 7.053 0 00-.535-1.29l-.308-.045A3.047 3.047 0 0112.4 3.036l-.046-.308c-.41-.22-.842-.4-1.289-.535l-.25.186a3.047 3.047 0 01-3.628 0l-.25-.186a7.053 7.053 0 00-1.29.535l-.045.308A3.047 3.047 0 013.036 5.6l-.308.046c-.22.41-.4.842-.535 1.289l.186.25a3.047 3.047 0 010 3.628l-.186.25c.136.447.315.879.535 1.29l.308.045A3.047 3.047 0 015.6 14.964l.046.308c.41.22.842.4 1.289.535l.25-.186zM7.388 18a9.092 9.092 0 01-3.612-1.497l-.184-1.24a1.016 1.016 0 00-.856-.855l-1.24-.184A9.092 9.092 0 010 10.612l.747-1.007c.266-.36.266-.85 0-1.21L0 7.388a9.092 9.092 0 011.497-3.612l1.24-.184c.442-.066.789-.413.855-.856l.184-1.24A9.092 9.092 0 017.388 0l1.007.747c.36.266.85.266 1.21 0L10.612 0a9.092 9.092 0 013.612 1.497l.184 1.24c.066.442.413.789.856.855l1.24.184A9.092 9.092 0 0118 7.388l-.747 1.007c-.266.36-.266.85 0 1.21L18 10.612a9.092 9.092 0 01-1.497 3.612l-1.24.184c-.442.066-.789.413-.855.856l-.184 1.24A9.092 9.092 0 0110.612 18l-1.007-.747a1.016 1.016 0 00-1.21 0L7.388 18zM9 13.063a4.063 4.063 0 110-8.126 4.063 4.063 0 010 8.126zm0-2.032A2.031 2.031 0 109 6.97a2.031 2.031 0 000 4.062z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
            <span
              class="emotion-10"
            >
              Account Settings
            </span>
          </a>
        </li>
        <li
          class="emotion-11"
          tabindex="-1"
        >
          <a
            class="emotion-9"
            href="https://datacamp.com/users/sign_out"
            role="menuitem"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              height="16"
              role="img"
              viewBox="0 0 18 18"
              width="16"
            >
              <title>
                Exit
              </title>
              <path
                d="M8 0a1 1 0 011 1v3.41a1 1 0 11-2 0V2H2v14h5v-2.428a1 1 0 112 0V17a1 1 0 01-1 1H1a1 1 0 01-1-1V1a1 1 0 011-1h7zm5.725 4.294l3.942 3.958a.997.997 0 01-.002 1.498l-3.956 3.957a1 1 0 01-1.497-1.322l.083-.094L14.58 10l-9.58.002a1 1 0 110-2L14.593 8l-2.287-2.296a.998.998 0 01.003-1.413 1.001 1.001 0 011.415.003z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
            <span
              class="emotion-10"
            >
              Log Out
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
